--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-matplotlib==3.5.1
-numpy==1.21.6
-pandas==1.3.5
-scikit-learn==1.0.2
-# torch==1.12.0
+matplotlib>=3.5.1
+numpy>=1.21.6
+pandas>=1.3.5
+scikit-learn>=1.0.2
